Agrega los nombre de Jesús y Rodrigo a README

--- a/README
+++ b/README
@@ -4,5 +4,6 @@ Diplomado Sistemas Embebidos
 Este es el proyecto de Control de Versiones
 
 Carlos Acosta
+Jesús Flores
 Roberto Guerrero
-
+Rodrigo Galeano
